--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   #firestore
   cloud_firestore: ^3.1.7
   firebase_core: ^1.17.1
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
