--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.attoform">
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="attoform"
         android:name="${applicationName}"
