--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.1.7
   firebase_core: ^1.17.1
   fluttertoast: ^8.0.9
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
