--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.17.1
   fluttertoast: ^8.0.9
   provider: ^6.0.3
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
