--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.attoform">
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
-        android:label="attoform"
+        android:label="aI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
