--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  searchfield: ^0.6.5
 
   #firestore
   cloud_firestore: ^3.1.7
@@ -42,6 +41,13 @@ dependencies:
   provider: ^6.0.3
   uuid: ^3.0.6
   flutter_spinkit: ^5.1.0
+  flutter_launcher_icons: ^0.9.3
+  dropdown_search: ^5.0.2
+
+flutter_icons :
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/AttoInfotechLogo_big.png
+   - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
