--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,15 @@ dependencies:
   firebase_core: ^1.17.1
   fluttertoast: ^8.0.9
   provider: ^6.0.3
+  #unique id creator
   uuid: ^3.0.6
   flutter_spinkit: ^5.1.0
   flutter_launcher_icons: ^0.9.3
   dropdown_search: ^5.0.2
+  #for call icon phone num on dial
+  url_launcher: ^6.1.4
 
-flutter_icons :
+flutter_icons:
   android: true
   ios: true
   image_path: "assets/icon.png"
@@ -72,7 +75,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/logo.png
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
