--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,20 +37,25 @@ dependencies:
   #firestore
   cloud_firestore: ^3.1.7
   firebase_core: ^1.17.1
+  # for toast message on adding and editing
   fluttertoast: ^8.0.9
+  #for streams
   provider: ^6.0.3
   #unique id creator
   uuid: ^3.0.6
+  #for loading widget
   flutter_spinkit: ^5.1.0
+  #for app icon
   flutter_launcher_icons: ^0.9.3
+  # searchable droppdown
   dropdown_search: ^5.0.2
   #for call icon phone num on dial
   url_launcher: ^6.1.4
 
 flutter_icons:
+  image_path: "assets/icon.png"
   android: true
   ios: true
-  image_path: "assets/icon.png"
 
 dev_dependencies:
   flutter_test:
