--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,11 +51,20 @@ dependencies:
   dropdown_search: ^5.0.2
   #for call icon phone num on dial
   url_launcher: ^6.1.4
+  flutter_native_splash: ^2.2.3+1
 
 flutter_icons:
   image_path: "assets/icon.png"
   android: true
   ios: true
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/logo.png
+
+  android_12:
+    image: assets/logo.png
+    icon_background_color: "#ffffff"
 
 dev_dependencies:
   flutter_test:
